# raft-rs

./: .dockerignore  .gitignore  .travis.yml  Cargo.toml  Dockerfile  README.md  docker-compose.yml  tore.set_voted_for(ServerId(5)).unwrap();
docker/: Dockerfile  Dockerfile_dev  docker-compose.yml
docker/config/: config.toml
docker/test/: var.sh
docker_build/: config.toml  config2.toml  config3.toml
docker_build/config/: config.toml
docker_build/config2/: config.toml
docs/: 404.html  index.html  index.xml  sitemap.xml
docs/about/: index.html
docs/fixed/: index.html  index.xml
docs/team/: index.html
examples/: config.rs  document.rs  handler.rs  http_handler.rs
src/: client.rs  connection.rs  consensus.rs  lib.rs  log_manager.rs  messages.capnp  messages.rs  messages_capnp.rs  server.rs  state.rs  transaction.rs
src/auth/: credentials.rs  file.rs  mod.rs  multi.rs  null.rs  sha256.rs  simple.rs
src/auth/credentials/: hashed.rs  mod.rs  plain.rs
src/auth/hasher/: mod.rs  plain.rs  sha256.rs
src/document/: .gitignore  Cargo.toml
src/document/src/: config.rs  doclog.rs  document.rs  handler.rs  http_handler.rs  io_handler.rs  login.rs  main.rs  statemachine.rs
src/document/src/parser/: toml.rs
src/persistent_log/: doc.rs  mem.rs  mod.rs
src/state_machine/: channel.rs  mod.rs  null.rs
src/transaction/: manager.rs  mod.rs  snapshot.rs  transaction.rs
test/: http_test.sh  transaction.sh  var.sh
