[package]
name = "document"
version = "0.1.0"
authors = ["kper <kevp.per@gmail.com>"]

[dependencies]
raft ={path="../.."} 
env_logger = "*"
bincode ="*"
capnp = "0.6"
capnp-nonblock = "0.3"
log = "0.3"
docopt ="*"
iron ="*"
router ="*"
params ="*"
toml ="*"
lazy_static ="0.1.*"
mio = "0.5"
serde_derive="*"
serde ="*"
serde_json ="*"
uuid = {git="https://github.com/rushmorem/uuid",branch="update-serde",features=["serde","v4"]}